@@ -1,6 +1,9 @@
 # for display continuity sake please use 2 spaces instead of tabs
 
-2013-04-10 mmichaud <michael.michaud@free.fr>
+2013-04-15 mmichaud <michael.michaud@free.fr>
+  * Fix the new ZoomToWMSLayerPlugIn (multiselection case did not work properly)
+
+2013-04-14 mmichaud <michael.michaud@free.fr>
   * Improve WMS parser to include WMS 1.3.0 and replace the complex ZoomToWMS 
     plugin by a simple one.
 
